# remem-community

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
config/: remem-server.toml
crates/remem-mcp/: CLAUDE.md  Cargo.toml
crates/remem-mcp/src/: client.rs  handler.rs  main.rs  protocol.rs  resources.rs  sse.rs  tools.rs
crates/remem-server/: CLAUDE.md  Cargo.toml
crates/remem-server/src/: config.rs  error.rs  main.rs
crates/remem-server/src/api/: mod.rs  openapi.rs  tests.rs
crates/remem-server/src/api/middleware/: auth.rs  rate_limit.rs
crates/remem-server/src/api/routes/: backup.rs  connections.rs  health.rs  lifecycle.rs  memories.rs  mod.rs  search.rs  tasks.rs
crates/remem-server/src/embedding/: mod.rs
crates/remem-server/src/engine/: error.rs  mod.rs
crates/remem-server/src/engine/index/: btree.rs  btree_segmented.rs  dirty.rs  graph.rs  graph_kuzu.rs  graph_segmented.rs  graph_wrapper.rs  hnsw.rs  inverted.rs  inverted_segmented.rs  manifest.rs  mod.rs  segment_io.rs
crates/remem-server/src/engine/query/: executor.rs  merge.rs  mod.rs  planner.rs  types.rs
crates/remem-server/src/engine/storage/: compaction.rs  durable_rename.rs  engine.rs  init.rs  memtable.rs  mod.rs  recovery.rs  tasks.rs  tmp_sweep.rs  wal.rs
crates/remem-server/src/engine/storage/sstable/: block.rs  format.rs  mod.rs  reader.rs  writer.rs
crates/remem-server/src/engine/util/: bloom.rs  mod.rs  simd.rs
crates/remem-server/src/services/: connection_manager.rs  lifecycle_manager.rs  memory_manager.rs  mod.rs  repository.rs  search_engine.rs  types.rs
crates/remem-server/src/tasks/: lifecycle.rs  mod.rs  registry.rs  supervisor.rs
docker/: remem-mcp.Dockerfile  remem-server-entrypoint.sh  remem-server.Dockerfile
memory/: feedback_build_test_in_container.md
scripts/: check_duplicate_connections.py  generate_memories.py
tests/: README.md
