[package]
name = "remem-mcp"
version = "0.1.0"
edition = "2021"
description = "Remem MCP server — Model Context Protocol interface over remem-server REST API"
license = "FSL-1.1-ALv2"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = "0.7"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
parking_lot = "0.12"
